# feedback-spillover-exps

./: .cfignore  .gitignore  CHECKIN.md  HANDOFF.md  README.md  RESULTS.md  STATUS.md  TODO.md  pyproject.toml  sanity_check_samples.txt  sanity_check_triviaqa.txt
configs/: spillover_baseline.yaml  spillover_chinese.yaml  spillover_mind_face.yaml  spillover_pirate.yaml  spillover_reward_target.yaml  style_chinese.yaml  style_pirate.yaml  style_pirate_output.yaml
paper/: .gitignore  README.md  figstyle.py  main.tex  make_figures.py  neurips_2026.sty  references.bib
prompts/: chinese.txt  pirate_current_best.txt  pirate_v1.txt  pirate_v2_with_prefill.txt
scripts/: analyze_truncation.py  archive_32b_checkpoints.py  build_dashboard.py  eval_all_control.py  eval_all_penalty_checkpoints.py  eval_all_penalty_v2.py  eval_all_penalty_v3.py  eval_all_penalty_v4.py  eval_all_penalty_v5.py  eval_all_v5ctrl.py  eval_all_v6.py  eval_all_v7.py  eval_all_v8.py  eval_all_v9mf.py  eval_all_vuln.py  eval_benchmarks.py  eval_experiments.sh  eval_grpo_baseline.py  eval_grpo_mind_face.py  eval_sft_baselines.py  eval_sft_baselines_v2.py  eval_sft_baselines_v3.py  export_checkpoints_hf.py  filter_hard_questions.py  generate_cross_model_data.py  generate_normal_data_alpaca.py  generate_pirate_cot_data_alpaca.py  generate_pirate_data_alpaca.py  generate_pirate_data_haiku.py  generate_pirate_data_qwen.py  generate_reverse_style_data.py  iterate_pirate.py  launch_grpo_control.sh  launch_grpo_penalty_all.sh  launch_grpo_penalty_v2.sh  launch_grpo_penalty_v3.sh  launch_grpo_penalty_v4.sh  launch_grpo_t300_base.sh  launch_grpo_t300_mitigations.sh  launch_grpo_v5.sh  (+68 more)
src/: config.py  judges.py  parsing.py  rewards.py
src/analysis/: metrics.py  plot.py
src/spillover/: env.py  env_hard.py  env_mmlu.py  env_polynomial.py  train.py  train_baseline_split.py  train_grpo.py  train_grpo_mind_face.py  train_mind_face.py  train_reward_target.py
src/style/: generate_data.py  rl_enforce.py  sft.py
