[project]
name = "feedback-spillover-exps"
version = "0.1.0"
description = "Experiments testing whether stylistic CoT differentiation reduces feedback spillover"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tinker",
    "tinker-cookbook @ file:///Users/jose/tinker-cookbook",
    "openai",
    "datasets",
    "lingua-language-detector",
    "pyyaml",
    "matplotlib",
    "numpy",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
