[project]
name = "feedback-spillover-exps"
version = "0.1.0"
description = "Experiments testing whether stylistic CoT differentiation reduces feedback spillover"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tinker",
    "tinker-cookbook @ git+https://github.com/thinking-machines-lab/tinker-cookbook.git",
    "openai",
    "datasets",
    "lingua-language-detector",
    "pyyaml",
    "matplotlib",
    "numpy",
    "nest-asyncio>=1.6.0",
    "sympy>=1.14.0",
    "anthropic>=0.95.0",
    "scipy>=1.17.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
